--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.1.1",
     "sharp": "^0.29.3",
+    "swiper": "^8.4.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24",
     "universal-cookie": "^4.0.4",
