--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-paginate": "^8.1.0",
     "react-spinners": "^0.11.0",
     "react-toastify": "^9.1.1",
+    "react-whatsapp": "^0.3.0",
     "sharp": "^0.29.3",
     "swiper": "^8.4.5",
     "tailwind-scrollbar-hide": "^1.1.7",
