--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.12",
     "cookies-next": "^2.0.4",
     "crypto": "^1.0.1",
     "extract-urls": "^1.3.2",
@@ -30,7 +31,7 @@
     "mongoose": "^6.3.0",
     "next": "^13.4.19",
     "next-auth": "^4.3.1",
-    "node-fetch": "^3.2.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.7.3",
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
