--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "cookies-next": "^2.0.4",
     "crypto": "^1.0.1",
     "extract-urls": "^1.3.2",
