--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.0.24",
     "universal-cookie": "^4.0.4",
+    "vercel": "^36.0.0",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
