--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.0.0",
     "cookies-next": "^2.0.4",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "extract-urls": "^1.3.2",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
