--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.4.2",
     "@next-auth/mongodb-adapter": "^1.0.3",
     "@next-auth/prisma-adapter": "^1.0.3",
+    "@paypal/react-paypal-js": "^8.8.3",
     "@tailwindcss/line-clamp": "^0.3.1",
     "autoprefixer": "^10.4.7",
     "axios": "^1.9.0",
