--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "extract-urls": "^1.3.2",
+    "firebase": "^11.8.1",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "heroicons": "^1.0.6",
@@ -34,7 +35,7 @@
     "next": "^15.3.1",
     "next-auth": "^4.3.1",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.7.3",
+    "nodemailer": "^7.0.3",
     "nprogress": "^0.2.0",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
